<resources>
    <string name="app_name">SSC App</string>

    <string name="net_no_server_connection">No server connection!\nData might be outdated</string>
    <string name="net_no_init_data">Internet connection required to load initial data, then app can be used offline.\n\n Check Internet connection and restart the app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="gcm_defaultSenderId">111748470494</string>

    <string name="menu_timetable">Timetable</string>
    <string name="menu_other">Other</string>
    <string name="menu_share">Media</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_info">Info</string>
    <string name="menu_host">Hosts</string>
    <string name="menu_map">Map</string>
    <string name="menu_sponsor"><![CDATA[Sponsors & partners]]></string>
    <string name="menu_notification_history">Notification history</string>
    <string name="menu_conference">Conference</string>
    <string name="loading_gif">loading gif</string>
    <string name="timetable_place_holder">timetable place holder</string>
    <string name="timetable_item_now">NOW</string>
    <string name="timetable_place_holder_time">00:00 &#8211; 00:00</string>
    <string name="timetable_dialog_info_place_holder">timetable dialog info place holder</string>
    <string name="host_overlay">overlay</string>
    <string name="host_picture">host picture</string>
    <string name="host_item_name_place_holder">host item name place holder</string>
    <string name="host_item_info_place_holder">host item info place holder</string>
    <string name="host_mail_image">host mail image</string>
    <string name="mail_topic">Students\' Science Conference</string>
    <string name="mail_fail">No mail client installed</string>
    <string name="conference_registration_and_opening">Conference registration and opening</string>
    <string name="map_info1">First day of conference (21st of September) begins with registration between 8:30&#8211;9:00 fallowed by official opening ceremony on 9:30</string>
    <string name="map_info2">Conference will start in H-14 University building</string>
    <string name="map_info3">view on map:</string>
    <string name="sponsor_item_place_holder">sponsor item place holder</string>
    <string name="media_image">media image</string>
    <string name="media_info_place_holder">media info place holder</string>
    <string name="media_twitter_profile">Twitter profile</string>
    <string name="media_facebook_fanpage">Facebook fanpage</string>
    <string name="media_youtube_chanel">Youtube channel</string>
    <string name="media_instagram">Instagram</string>
    <string name="media_conference_website">Conference website</string>
    <string name="asi_logo">ASI logo</string>
    <string name="application_created_by">Application created by</string>
    <string name="academic_it_association">(Academic IT Association)</string>
    <string name="me">Jakub Dorda</string>
    <string name="me_info">Software developer, ASI member</string>
    <string name="special_thanks_for_creating_graphics_to">Special thanks for help with graphics to:</string>
    <string name="graphic_designer_conference_host">Graphic designer, conference host</string>
    <string name="roksana_kowalczyk">Roksana Kowalczyk</string>
    <string name="link_me_img"><![CDATA[https://scontent-waw1-1.xx.fbcdn.net/v/t31.0-8/17390545_619955721543311_6631848786949583906_o.jpg?oh=e4f1ab7364a576cb0ea4d53a810e2302&oe=5A32016E]]></string>
    <string name="link_roks_img">http://ssc.pwr.edu.pl/wp/wp-content/uploads/2017/03/ssc_foto_Roksana.jpg</string>
    <string name="link_asi_img">http://ssc.pwr.edu.pl/wp/wp-content/uploads/2017/08/logo-asi.png</string>
    <string name="contact_title">CONFERENCE OFFICE</string>
    <string name="contact_info">In order to ensure the highest quality of your Students’ Science Conference experience we have established a Conference Office. It is almost 24/7 available and has a goal to answer any of your questions below 2 working days. We strive to reach most of the expectations you have towards the event, therefore you are more than welcome to write any suggestions, questions and problems you have encountered.</string>
    <string name="contact_title2">Contact us</string>
    <string name="contact_mail">office@ssc.pwr.edu.pl</string>
    <string name="ssc_conference_logo">ssc conference logo</string>
    <string name="notification_hist_time_place_holder">23.04.2017 00:00</string>
    <string name="notification_hist_title_place_holder">Title</string>
    <string name="notification_hist_message_place_holder">Notification body here</string>
    <string name="you_haven_t_received_any_notifications_yet">You haven\'t received any notifications yet</string>
    <string name="map_info4">Conference localization</string>
    <string name="map_info5">HOTEL CIEPLICE\nCervi 11, 58&#8211;560 Jelenia Góra\n<a href="tel:+48757551041">+48 75 755 10 41</a>\n<a href="http://www.hotelcieplice.pl">www.hotelcieplice.pl</a></string>
    <string name="hotel_cieplice_img_dec">Hotel Cieplice</string>
    <string name="timetable_info_icon">timetable info icon</string>

</resources>
