<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favicon"
        android:title=""
        android:orderInCategory="79"
        android:icon="@mipmap/ic_favicon"
        app:showAsAction="ifRoom|withText" />
</menu>
